# TeleOpCar

./: .gitignore  README.md  startup.sh
BasicTests/: frontServoTest2.py  motorTest.py  wheelCheck.py
BasicTests/websocketTests/: client.py  server.py
SW Files/: Pinion.SLDPRT  Rack and Pinion.SLDASM
backend/: db.sqlite3  flask_server.py  manage.py  motor_control.py  websocket_server.py
backend/oldFlask/: flask_server.py
backend/staticfiles/css/: styles.css
backend/staticfiles/js/: script.js
backend/teleop/: apps.py  consumers.py  motor_control.py  ros_interface.py  routing.py  threaded_camera.py  urls.py  views.py
backend/teleop/static/css/: styles.css
backend/teleop/static/js/: script.js  scripts.js
backend/teleop/templates/teleop/: index.html
backend/teleop_project/: asgi.py  settings.py  urls.py  wsgi.py
config/launch/: camera_launch.py  motor_control_launch.py  servo_control_launch.py  ultrasonic_launch.py
docs/SW Files/: Rack and Pinion.SLDASM  Rack.SLDPRT  ServoMount.SLDPRT  ServoToRod.SLDPRT
env/: pyvenv.cfg
env/Scripts/: activate  activate.bat
frontend/static/css/: styles.css
frontend/static/js/: script.js
frontend/templates/: index.html
src/bridge/: CMakeLists.txt  brake_manager_node.py  package.xml  websocket_client.py  websocket_ros2_bridge.py
src/bridge/launch/: websocket_bridge_launch.py
src/camera/: CMakeLists.txt  camera_node.py  package.xml
src/camera/launch/: camera_launch.py
src/camera/src/: camera_node.py
src/motors/: CMakeLists.txt  motors_control_node.py  package.xml  servo_contro_node.py  servo_control_node.py
src/motors/launch/: motor_launch.py
src/motors/src/: brake_manager_node.py  motors_control_node.py  servo_control_node.py
src/sensors/: CMakeLists.txt  obstacleDetection_node.py  package.xml
src/sensors/launch/: obstacle_launch.py
src/sensors/src/: obstacleDetection_node.py  ultrasonic_node.py
