<?xml version="1.0"?>
<package format="3">
  <name>bridge</name>
  <version>0.0.1</version>
  <description>Bridge package for WebSocket and ROS2 communication</description>

  <maintainer email="dnlbntzlpz@gmail.com">Daniel Benitez-Lopez</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>python-dotenv</exec_depend>
  <exec_depend>pygame</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
