<?xml version="1.0"?>
<package format="3">
  <name>motors</name>
  <version>0.0.1</version>
  <description>Motor control package for brake, motor, and servo functionality</description>

  <maintainer email="dnlbntzlpz@gmail.com">Daniel Benitez-Lopez</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>gpiozero</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
